syntax = "proto3";

option java_multiple_files = true;
option java_package = "attribute";

message Empty {} 

message Category {
  string id = 1;
  string name = 2;
}

message Attribute {
  string name = 1;
  repeated string values = 2;
}

message CategoryAttribute {
  Category category = 1;
  repeated Attribute attributes = 2;
}
message getId{
  string id =1;
}

service AttributeService {
  rpc getCategories (getId) returns (stream Category);
  rpc getCategoryAttribute (Empty) returns (stream CategoryAttribute);
}
