syntax = "proto3";

package variant;

option java_multiple_files = true;
option java_package = "variant";

import "shared/attribute.proto";
import "shared/inventory.proto";
import "shared/message.proto";

enum Status {
  UNKNOWN = 0;
  SOLD_OUT = 1;
  IN_STOCK = 2;
  PRE_ORDER = 3;
  DISCONTINUED = 4;
}

message Attribute {
  string name = 1;
  repeated string values = 2;
}

message VariantResponse {
  string id = 1;
  repeated Attribute attributes = 2;
  Status status = 3;
  shared.InventoryResponse inventory = 4;
  double price = 5;
  string sku = 6;
}

message GetVariantsRequest {
  string productId = 1;
}

message VariantsRequest {
  repeated shared.Attribute attributes = 1;
  Status status = 2;
  double price = 3;
  string sku = 4;
}

message CreateVariantsRequest {
  string productId = 1;
  repeated VariantsRequest variants = 2;
}

service VariantService {
  rpc GetVariants(GetVariantsRequest) returns (stream VariantResponse);
  rpc CreateVariants(CreateVariantsRequest) returns (shared.Message);
  rpc DeleteVariantsByProductId(GetVariantsRequest) returns (shared.Message);
}
